fix: 🐛 Alignments settings and body padding on small screens.  Fixes #110 and Fixes #66 (#115)

--- a/src/scss/base/_alignments.scss
+++ b/src/scss/base/_alignments.scss
@@ -1,12 +1,6 @@
 /*--------------------------------------------------------------
 # - Alignments
 --------------------------------------------------------------*/
-.alignleft,
-.alignright,
-.aligncenter {
-	display: block;
-}
-
 .alignleft {
 	clear: left;
 }
@@ -14,8 +8,8 @@
 .alignright {
 	clear: right;
 }
+
 .aligncenter {
 	clear: both;
-	margin-right: auto;
-	margin-left: auto;
+	display: table;
 }
