--- a/src/scss/theme-regions/_ucsc-footer.scss
+++ b/src/scss/theme-regions/_ucsc-footer.scss
@@ -15,13 +15,8 @@
 	}
 
 	.ucsc-footer__inner {
-    padding: 0.25rem 0;
+    padding: 0.2rem 0;
 	}
-
-	.ucsc-footer__logo {
-
-	}
-
 	.ucsc-footer__links {
 
 		display: flex;
